@@ -46,7 +46,7 @@ init: function(){
 },
 
 create: function(name,value,days){
-	if(days) {
+	if(typeof(days) != "undefined") {
 		var date = new Date();
 		date.setTime(date.getTime()+(days*24*60*60*1000));
 		var expires = "; expires="+date.toGMTString();
